--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.37.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
